--- a/public/index.html
+++ b/public/index.html
@@ -101,169 +101,38 @@
       >
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <div style="opacity: 0;">
-      <form
-        method="post"
-        action="/page/60860/petition/2"
-        class="en__component en__component--page"
-      >
-        <input type="hidden" name="hidden" class="en__hiddenFields" value="" />
-        <input
-          type="hidden"
-          name="sessionId"
-          value="3341cbd67e59444c9d799f7e88fa5fbb-server10008"
-        />
-        <input type="hidden" name="gatewaykey" value="" />
-        <input type="hidden" name="gatewayaccountid" value="" />
-        <input type="hidden" name="gatewaymode" value="" />
 
-        <ul class="en__errorList"></ul>
+    <!-- MC_FORM_STARTS -->
+    <form method="post" action="https://cloud.greenhk.greenpeace.org/up-dev-endpoint" class="" id="mc-form" style="display:none">
+      <input type="hidden" name="numSignupTarget" value="100">
+      <input type="hidden" name="numResponses" value="30">
 
-        <div class="en__component en__component--row en__component--row--1">
-          <div class="en__component en__component en__component--column">
-            <div class="en__component en__component--formblock" style="">
-              <div
-                class="en__field en__field--text en__field--676626 en__field--emailAddress en__mandatory"
-              >
-                <label
-                  for="en__field_supporter_emailAddress"
-                  class="en__field__label"
-                  style=""
-                  >電郵地址</label
-                >
-                <div class="en__field__element en__field__element--text">
-                  <input
-                    id="en__field_supporter_emailAddress"
-                    type="text"
-                    class="en__field__input en__field__input--text"
-                    name="supporter.emailAddress"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div
-                class="en__field en__field--text en__field--676627 en__field--lastName en__mandatory"
-              >
-                <label
-                  for="en__field_supporter_lastName"
-                  class="en__field__label"
-                  style=""
-                  >姓氏</label
-                >
-                <div class="en__field__element en__field__element--text">
-                  <input
-                    id="en__field_supporter_lastName"
-                    type="text"
-                    class="en__field__input en__field__input--text"
-                    name="supporter.lastName"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div
-                class="en__field en__field--text en__field--676629 en__field--firstName en__mandatory"
-              >
-                <label
-                  for="en__field_supporter_firstName"
-                  class="en__field__label"
-                  style=""
-                  >名字</label
-                >
-                <div class="en__field__element en__field__element--text">
-                  <input
-                    id="en__field_supporter_firstName"
-                    type="text"
-                    class="en__field__input en__field__input--text"
-                    name="supporter.firstName"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div
-                class="en__field en__field--text en__field--676628 en__field--phoneNumber"
-              >
-                <label
-                  for="en__field_supporter_phoneNumber"
-                  class="en__field__label"
-                  style=""
-                  >手提號碼（選填）</label
-                >
-                <div class="en__field__element en__field__element--text">
-                  <input
-                    id="en__field_supporter_phoneNumber"
-                    type="text"
-                    class="en__field__input en__field__input--text"
-                    name="supporter.phoneNumber"
-                    value=""
-                  />
-                </div>
-              </div>
-              <div
-                class="en__field en__field--select en__field--676630 en__field--NOT_TAGGED_6"
-              >
-                <label
-                  for="en__field_supporter_NOT_TAGGED_6"
-                  class="en__field__label"
-                  style=""
-                  >出生年份</label
-                >
-                <div class="en__field__element en__field__element--select">
-                  <select
-                    id="en__field_supporter_NOT_TAGGED_6"
-                    class="en__field__input en__field__input--select"
-                    name="supporter.NOT_TAGGED_6"
-                  >
-                    <option value="1">1</option>
-                  </select>
-                </div>
-              </div>
-              <div
-                class="en__field en__field--checkbox en__field--question en__field--7275 en__field--email-ok-hongkong"
-              >
-                <label class="en__field__label" style=""
-                  >email_ok_hongkong</label
-                >
-                <div
-                  class="en__field__element en__field__element--checkbox
-      "
-                >
-                  <div class="en__field__item">
-                    <input
-                      id="en__field_supporter_questions_7275"
-                      checked=""
-                      type="checkbox"
-                      class="en__field__input en__field__input--checkbox"
-                      value="Y"
-                      name="supporter.questions.7275"
-                    />
-                    <label
-                      for="en__field_supporter_questions_7275"
-                      class="en__field__label en__field__label--item"
-                      >我願意收到綠色和平發送的通訊！我並同意綠色和平按照其私隱政策與個人資料收集聲明與我保持聯絡。</label
-                    >
-                  </div>
-                </div>
-              </div>
-              <input
-                type="hidden"
-                class="en__field__input en__field__input--hidden"
-                name="supporter.NOT_TAGGED_46"
-                value="HK"
-              />
+      <input placeholder="FirstName" name="FirstName" type="text" value="">
+      <input placeholder="LastName" name="LastName" type="text" value="">
+      <input placeholder="Email" name="Email" type="email" value="">
+      <input placeholder="MobilePhone" name="MobilePhone" type="tel" value="">
+      <input placeholder="Birthdate" name="Birthdate" type="text" value="">
+      <input placeholder="MobileCountryCode" name="MobileCountryCode" type="text">
+      <input placeholder="OptIn" name="OptIn" type="checkbox" value="">
 
-              <input
-                type="hidden"
-                class="en__field__input en__field__input--hidden"
-                name="supporter.NOT_TAGGED_9"
-                value="zh"
-              />
+      <input type="hidden" name="req" value="post_data">
+      <input type="hidden" name="LeadSource" value="Petition - Plastics">
+      <input type="hidden" name="Petition_Interested_In_Arctic__c" value="false">
+      <input type="hidden" name="Petition_Interested_In_Climate__c" value="false">
+      <input type="hidden" name="Petition_Interested_In_Forest__c" value="false">
+      <input type="hidden" name="Petition_Interested_In_Health__c" value="false">
+      <input type="hidden" name="Petition_Interested_In_Oceans__c" value="false">
+      <input type="hidden" name="Petition_Interested_In_Plastics__c" value="true">
+      <input type="hidden" name="CampaignId" value="7010k000000iJ7aAAE">
+      <input type="hidden" name="UtmMedium" value="">
+      <input type="hidden" name="UtmSource" value="">
+      <input type="hidden" name="UtmCampaign" value="">
+      <input type="hidden" name="UtmContent" value="">
+      <input type="hidden" name="UtmTerm" value="">
+      <input type="hidden" name="DonationPageUrl" value="https://www.greenpeace.org/eastasia/">
+      <input name="req" type="hidden" value="post_data">
+    </form>
+    <!-- MC_FORM_ENDS -->
 
-              <div class="en__submit"><button style="">立即聯署</button></div>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
   </body>
 </html>
